--- a/grammar.ipynb
+++ b/grammar.ipynb
@@ -2,26 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: preprocessing not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: preprocessing not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\denys\\Programming\\BEP\\Grammar\\HerbExamples.jl\\notebooks\\grammar.ipynb:3"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using ScikitLearn\n",
     "using ScikitLearn.Pipelines: Pipeline, FeatureUnion\n",
-    "using ScikitLearn.preprocessing : FunctionTransformer"
+    "# using ScikitLearn.preprocessing : FunctionTransformer\n",
+    "using XGBoost"
    ]
   },
   {
@@ -155,7 +143,12 @@
     "        (\"LogisticRegression\", LogisticRegression) |\n",
     "        (\"KNearestNeighborClassifier\", KNearestNeighborClassifier)\n",
     "\n",
-    "end"
+    "end\n",
+    "\n",
+    "cfe = Herb.HerbSearch.ContextFreeEnumerator(g, 3, :START)\n",
+    "for rule in cfe\n",
+    "    println(Herb.HerbSearch.rulenode2expr(rule, g))\n",
+    "end\n"
    ]
   }
  ],
