change grammar so it outputs in the right format and add example pipelines

--- a/grammar.ipynb
+++ b/grammar.ipynb
@@ -113,42 +113,61 @@
    "source": [
     "sequence(a, b) = Pipeline([a, b]) \n",
     "parallel(a, b) = FeatureUnion([a, b]) \n",
-    "# idTrans = FunctionTransformer(x -> x)\n",
-    "# The code becomes a lot cleaner when you take out the PASS option. \n",
-    "# We should probably look into splitting up the estimators in different categories and adding a classifier category\n",
     "\n",
     "g = Herb.HerbGrammar.@cfgrammar begin\n",
-    "    START   = CLASSIF | sequence(PRE, CLASSIF)\n",
-    "    PRE     = PREPROC | FSELECT | sequence(PRE, PRE) | parallel(BRANCH, BRANCH)\n",
-    "    BRANCH  = PRE | CLASSIF | sequence(PRE, CLASSIF) \n",
+    "    # START   = CLASSIF | sequence(PRE, CLASSIF)\n",
+    "    # PRE     = PREPROC | FSELECT | sequence(PRE, PRE) | parallel(BRANCH, BRANCH)\n",
+    "    # BRANCH  = PRE | CLASSIF | sequence(PRE, CLASSIF) \n",
+    "    START   = CLASSIF | Pipeline([PRE, CLASSIF])\n",
+    "    PRE     = PREPROC | FSELECT | Pipeline([PRE, PRE])  | FeatureUnion([BRANCH, BRANCH]) \n",
+    "    BRANCH  = PRE | CLASSIF | Pipeline([PRE, CLASSIF]) \n",
     "\n",
     "    PREPROC =   \n",
-    "        (\"StandardScaler\", StandardScaler) |\n",
-    "        (\"RobustScaler\", RobustScaler) |\n",
-    "        (\"MinMaxScaler\", MinMaxScaler) |\n",
-    "        (\"MaxAbsScaler\", MaxAbsScaler) |\n",
-    "        (\"RandomizedPCA\", RandomizedPCA) |\n",
-    "        (\"Binarizer\", Binarizer) |\n",
-    "        (\"PolynomialFeatures\", PolynomialFeatures)\n",
+    "        (\"StandardScaler\", StandardScaler()) |\n",
+    "        (\"RobustScaler\", RobustScaler()) |\n",
+    "        (\"MinMaxScaler\", MinMaxScaler()) |\n",
+    "        (\"MaxAbsScaler\", MaxAbsScaler()) |\n",
+    "        (\"RandomizedPCA\", RandomizedPCA()) |\n",
+    "        (\"Binarizer\", Binarizer()) |\n",
+    "        (\"PolynomialFeatures\", PolynomialFeatures())\n",
     "    FSELECT =  \n",
-    "        (\"VarianceThreshold\", VarianceThreshold) |\n",
-    "        (\"SelectKBest\",  SelectKBest) |\n",
-    "        (\"SelectPercentile\",  SelectPercentile) |\n",
-    "        (\"SelectFwe\",  SelectFwe) |\n",
-    "        (\"Recursive Feature Elimination\",  RFE) \n",
+    "        (\"VarianceThreshold\", VarianceThreshold()) |\n",
+    "        (\"SelectKBest\",  SelectKBest()) |\n",
+    "        (\"SelectPercentile\",  SelectPercentile()) |\n",
+    "        (\"SelectFwe\",  SelectFwe()) |\n",
+    "        (\"Recursive Feature Elimination\",  RFE()) \n",
     "    CLASSIF =\n",
-    "        (\"DecisionTree\", DecisionTree) |\n",
-    "        (\"RandomForest\", RandomForest) |\n",
-    "        (\"Gradient Boosting Classifier\", GradientBoostingClassifier) |\n",
-    "        (\"LogisticRegression\", LogisticRegression) |\n",
-    "        (\"KNearestNeighborClassifier\", KNearestNeighborClassifier)\n",
-    "\n",
-    "end\n",
-    "\n",
+    "        (\"DecisionTree\", DecisionTree()) |\n",
+    "        (\"RandomForest\", RandomForest()) |\n",
+    "        (\"Gradient Boosting Classifier\", GradientBoostingClassifier()) |\n",
+    "        (\"LogisticRegression\", LogisticRegression()) |\n",
+    "        (\"KNearestNeighborClassifier\", KNearestNeighborClassifier())\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cfe = Herb.HerbSearch.ContextFreeEnumerator(g, 3, :START)\n",
     "for rule in cfe\n",
     "    println(Herb.HerbSearch.rulenode2expr(rule, g))\n",
-    "end\n"
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# easy pipeline:\n",
+    "pipeline1 = Pipeline([(\"StandardScaler\", StandardScaler()), (\"DecisionTree\", DecisionTree())])\n",
+    "\n",
+    "# more complex pipeline\n",
+    "pipeline2 = Pipeline([Pipeline([(\"MinMaxScaler\", MinMaxScaler()), FeatureUnion([(\"Recursive Feature Elimination\", RFE()), (\"SelectFwe\", SelectFwe())])]), (\"DecisionTree\", DecisionTree())])"
    ]
   }
  ],
