change it so that all pipelines have only one classifier, in the end

--- a/grammar.ipynb
+++ b/grammar.ipynb
@@ -118,9 +118,10 @@
     "    # START   = CLASSIF | sequence(PRE, CLASSIF)\n",
     "    # PRE     = PREPROC | FSELECT | sequence(PRE, PRE) | parallel(BRANCH, BRANCH)\n",
     "    # BRANCH  = PRE | CLASSIF | sequence(PRE, CLASSIF) \n",
+    "\n",
     "    START   = CLASSIF | Pipeline([PRE, CLASSIF])\n",
-    "    PRE     = PREPROC | FSELECT | Pipeline([PRE, PRE])  | FeatureUnion([BRANCH, BRANCH]) \n",
-    "    BRANCH  = PRE | CLASSIF | Pipeline([PRE, CLASSIF]) \n",
+    "    PRE     = PREPROC | FSELECT | Pipeline([PRE, PRE])  | FeatureUnion([PRE, PRE]) \n",
+    "    # BRANCH  = PRE | CLASSIF | Pipeline([PRE, CLASSIF]) \n",
     "\n",
     "    PREPROC =   \n",
     "        (\"StandardScaler\", StandardScaler()) |\n",
