fixed imports, made it so that only 1 classifier per pipeline

--- a/grammar.ipynb
+++ b/grammar.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "using ScikitLearn\n",
     "using ScikitLearn.Pipelines: Pipeline, FeatureUnion\n",
-    "# using ScikitLearn.preprocessing : FunctionTransformer\n",
     "using XGBoost"
    ]
   },
@@ -31,6 +30,22 @@
     "using Revise\n",
     "\n",
     "include(\"../../Herb.jl/src/Herb.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@sk_import decomposition: (PCA)\n",
+    "@sk_import preprocessing: (StandardScaler, RobustScaler, MinMaxScaler, MaxAbsScaler, Binarizer, PolynomialFeatures)\n",
+    "@sk_import feature_selection: (VarianceThreshold, SelectKBest, SelectPercentile, SelectFwe, RFE)\n",
+    "@sk_import tree: (DecisionTreeClassifier)\n",
+    "@sk_import ensemble: (RandomForestClassifier, GradientBoostingClassifier)\n",
+    "@sk_import linear_model: (LogisticRegression)\n",
+    "@sk_import neighbors: (NearestNeighbors)\n",
+    "@sk_import svm: (LinearSVC)"
    ]
   },
   {
@@ -119,8 +134,9 @@
     "    # PRE     = PREPROC | FSELECT | sequence(PRE, PRE) | parallel(BRANCH, BRANCH)\n",
     "    # BRANCH  = PRE | CLASSIF | sequence(PRE, CLASSIF) \n",
     "\n",
-    "    START   = CLASSIF | Pipeline([PRE, CLASSIF])\n",
-    "    PRE     = PREPROC | FSELECT | Pipeline([PRE, PRE])  | FeatureUnion([PRE, PRE]) \n",
+    "    \n",
+    "    START   = Pipeline([CLASSIF]) | Pipeline([PRE, CLASSIF])\n",
+    "    PRE     = PREPROC | FSELECT | (\"seq\", Pipeline([PRE, PRE]))  | (\"par\", FeatureUnion([PRE, PRE])) \n",
     "    # BRANCH  = PRE | CLASSIF | Pipeline([PRE, CLASSIF]) \n",
     "\n",
     "    PREPROC =   \n",
@@ -128,7 +144,7 @@
     "        (\"RobustScaler\", RobustScaler()) |\n",
     "        (\"MinMaxScaler\", MinMaxScaler()) |\n",
     "        (\"MaxAbsScaler\", MaxAbsScaler()) |\n",
-    "        (\"RandomizedPCA\", RandomizedPCA()) |\n",
+    "        (\"PCA\", PCA()) |\n",
     "        (\"Binarizer\", Binarizer()) |\n",
     "        (\"PolynomialFeatures\", PolynomialFeatures())\n",
     "    FSELECT =  \n",
@@ -136,13 +152,13 @@
     "        (\"SelectKBest\",  SelectKBest()) |\n",
     "        (\"SelectPercentile\",  SelectPercentile()) |\n",
     "        (\"SelectFwe\",  SelectFwe()) |\n",
-    "        (\"Recursive Feature Elimination\",  RFE()) \n",
+    "        (\"Recursive Feature Elimination\",  RFE(LinearSVC())) \n",
     "    CLASSIF =\n",
-    "        (\"DecisionTree\", DecisionTree()) |\n",
-    "        (\"RandomForest\", RandomForest()) |\n",
+    "        (\"DecisionTree\", DecisionTreeClassifier()) |\n",
+    "        (\"RandomForest\", RandomForestClassifier()) |\n",
     "        (\"Gradient Boosting Classifier\", GradientBoostingClassifier()) |\n",
     "        (\"LogisticRegression\", LogisticRegression()) |\n",
-    "        (\"KNearestNeighborClassifier\", KNearestNeighborClassifier())\n",
+    "        (\"NearestNeighborClassifier\", NearestNeighbors())\n",
     "end"
    ]
   },
@@ -165,10 +181,10 @@
    "outputs": [],
    "source": [
     "# easy pipeline:\n",
-    "pipeline1 = Pipeline([(\"StandardScaler\", StandardScaler()), (\"DecisionTree\", DecisionTree())])\n",
+    "Pipeline([(\"Recursive Feature Elimination\", RFE(LinearSVC())), (\"DecisionTree\", DecisionTreeClassifier())])\n",
     "\n",
     "# more complex pipeline\n",
-    "pipeline2 = Pipeline([Pipeline([(\"MinMaxScaler\", MinMaxScaler()), FeatureUnion([(\"Recursive Feature Elimination\", RFE()), (\"SelectFwe\", SelectFwe())])]), (\"DecisionTree\", DecisionTree())])"
+    "Pipeline([(\"seq\", Pipeline([(\"par\", FeatureUnion([(\"PolynomialFeatures\", PolynomialFeatures()), (\"SelectFwe\", SelectFwe())])), (\"seq\", Pipeline([(\"SelectPercentile\", SelectPercentile()), (\"PolynomialFeatures\", PolynomialFeatures())]))])), (\"NearestNeighborClassifier\", NearestNeighbors())])"
    ]
   }
  ],
