added cost function for pipelines

--- a/program_synthesis.ipynb
+++ b/program_synthesis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module Herb.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -78,33 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: redefinition of constant PCA. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant StandardScaler. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant RobustScaler. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant MinMaxScaler. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant MaxAbsScaler. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant Binarizer. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant PolynomialFeatures. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant VarianceThreshold. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant SelectKBest. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant SelectPercentile. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant SelectFwe. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant RFE. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant DecisionTreeClassifier. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant RandomForestClassifier. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant GradientBoostingClassifier. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant LogisticRegression. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant NearestNeighbors. This may fail, cause incorrect answers, or produce other errors.\n",
-      "WARNING: redefinition of constant LinearSVC. This may fail, cause incorrect answers, or produce other errors.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -137,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div style = \"float: left;\"><span>5×5 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">sepallength</th><th style = \"text-align: left;\">sepalwidth</th><th style = \"text-align: left;\">petallength</th><th style = \"text-align: left;\">petalwidth</th><th style = \"text-align: left;\">class</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"CategoricalArrays.CategoricalValue{String, UInt32}\" style = \"text-align: left;\">Cat…</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">5.4</td><td style = \"text-align: right;\">3.4</td><td style = \"text-align: right;\">1.5</td><td style = \"text-align: right;\">0.4</td><td style = \"text-align: left;\">Iris-setosa</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">6.8</td><td style = \"text-align: right;\">2.8</td><td style = \"text-align: right;\">4.8</td><td style = \"text-align: right;\">1.4</td><td style = \"text-align: left;\">Iris-versicolor</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">6.9</td><td style = \"text-align: right;\">3.1</td><td style = \"text-align: right;\">5.1</td><td style = \"text-align: right;\">2.3</td><td style = \"text-align: left;\">Iris-virginica</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">6.4</td><td style = \"text-align: right;\">2.8</td><td style = \"text-align: right;\">5.6</td><td style = \"text-align: right;\">2.1</td><td style = \"text-align: left;\">Iris-virginica</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">6.5</td><td style = \"text-align: right;\">2.8</td><td style = \"text-align: right;\">4.6</td><td style = \"text-align: right;\">1.5</td><td style = \"text-align: left;\">Iris-versicolor</td></tr></tbody></table></div>"
+       "<div><div style = \"float: left;\"><span>5×5 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">sepallength</th><th style = \"text-align: left;\">sepalwidth</th><th style = \"text-align: left;\">petallength</th><th style = \"text-align: left;\">petalwidth</th><th style = \"text-align: left;\">class</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"CategoricalArrays.CategoricalValue{String, UInt32}\" style = \"text-align: left;\">Cat…</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">4.9</td><td style = \"text-align: right;\">3.1</td><td style = \"text-align: right;\">1.5</td><td style = \"text-align: right;\">0.1</td><td style = \"text-align: left;\">Iris-setosa</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">6.1</td><td style = \"text-align: right;\">2.6</td><td style = \"text-align: right;\">5.6</td><td style = \"text-align: right;\">1.4</td><td style = \"text-align: left;\">Iris-virginica</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">6.8</td><td style = \"text-align: right;\">3.2</td><td style = \"text-align: right;\">5.9</td><td style = \"text-align: right;\">2.3</td><td style = \"text-align: left;\">Iris-virginica</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">6.2</td><td style = \"text-align: right;\">2.2</td><td style = \"text-align: right;\">4.5</td><td style = \"text-align: right;\">1.5</td><td style = \"text-align: left;\">Iris-versicolor</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">4.9</td><td style = \"text-align: right;\">2.4</td><td style = \"text-align: right;\">3.3</td><td style = \"text-align: right;\">1.0</td><td style = \"text-align: left;\">Iris-versicolor</td></tr></tbody></table></div>"
       ],
       "text/latex": [
        "\\begin{tabular}{r|ccccc}\n",
@@ -151,11 +120,11 @@
        "\t\\hline\n",
        "\t& Float64 & Float64 & Float64 & Float64 & Cat…\\\\\n",
        "\t\\hline\n",
-       "\t1 & 5.4 & 3.4 & 1.5 & 0.4 & Iris-setosa \\\\\n",
-       "\t2 & 6.8 & 2.8 & 4.8 & 1.4 & Iris-versicolor \\\\\n",
-       "\t3 & 6.9 & 3.1 & 5.1 & 2.3 & Iris-virginica \\\\\n",
-       "\t4 & 6.4 & 2.8 & 5.6 & 2.1 & Iris-virginica \\\\\n",
-       "\t5 & 6.5 & 2.8 & 4.6 & 1.5 & Iris-versicolor \\\\\n",
+       "\t1 & 4.9 & 3.1 & 1.5 & 0.1 & Iris-setosa \\\\\n",
+       "\t2 & 6.1 & 2.6 & 5.6 & 1.4 & Iris-virginica \\\\\n",
+       "\t3 & 6.8 & 3.2 & 5.9 & 2.3 & Iris-virginica \\\\\n",
+       "\t4 & 6.2 & 2.2 & 4.5 & 1.5 & Iris-versicolor \\\\\n",
+       "\t5 & 4.9 & 2.4 & 3.3 & 1.0 & Iris-versicolor \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -163,11 +132,11 @@
        "\u001b[1m Row \u001b[0m│\u001b[1m sepallength \u001b[0m\u001b[1m sepalwidth \u001b[0m\u001b[1m petallength \u001b[0m\u001b[1m petalwidth \u001b[0m\u001b[1m class           \u001b[0m\n",
        "     │\u001b[90m Float64     \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Float64     \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Cat…            \u001b[0m\n",
        "─────┼───────────────────────────────────────────────────────────────────\n",
-       "   1 │         5.4         3.4          1.5         0.4  Iris-setosa\n",
-       "   2 │         6.8         2.8          4.8         1.4  Iris-versicolor\n",
-       "   3 │         6.9         3.1          5.1         2.3  Iris-virginica\n",
-       "   4 │         6.4         2.8          5.6         2.1  Iris-virginica\n",
-       "   5 │         6.5         2.8          4.6         1.5  Iris-versicolor"
+       "   1 │         4.9         3.1          1.5         0.1  Iris-setosa\n",
+       "   2 │         6.1         2.6          5.6         1.4  Iris-virginica\n",
+       "   3 │         6.8         3.2          5.9         2.3  Iris-virginica\n",
+       "   4 │         6.2         2.2          4.5         1.5  Iris-versicolor\n",
+       "   5 │         4.9         2.4          3.3         1.0  Iris-versicolor"
       ]
      },
      "metadata": {},
@@ -197,14 +166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size: (150, 5)"
+      "size: (150, 5"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ")"
      ]
     },
     {
@@ -250,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,14 +305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pipeline([(\"DecisionTree\", DecisionTreeClassifier())])\n",
+      "Pipeline([(\"DecisionTree\", DecisionTreeClassifier())])"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Pipeline([(\"RandomForest\", RandomForestClassifier())])\n",
       "Pipeline([(\"Gradient Boosting Classifier\", GradientBoostingClassifier())])\n",
       "Pipeline([(\"LogisticRegression\", LogisticRegression())])\n",
@@ -362,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +384,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pipeline_cost_function"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\"\"\"Trains the pipeline and returns 1-accuracy\"\"\"\n",
+    "function pipeline_cost_function(pipeline, train_X, train_Y, test_X, test_Y)\n",
+    "    return 1.0- evaluate_pipeline(pipeline, train_X, train_Y, test_X, test_Y)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -485,6 +490,26 @@
     "# print result\n",
     "println(\"\\n\\nBest pipeline: \", round(best_accuracy, digits=2))\n",
     "print(best_pipeline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06666666666666665"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "test_pipeline = Pipeline([(\"DecisionTree\", DecisionTreeClassifier())])\n",
+    "pipeline_cost_function(test_pipeline, train_X, train_Y, test_X, test_Y)"
    ]
   },
   {
