--- a/program_synthesis.ipynb
+++ b/program_synthesis.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
     "                                                                    neighbourhood_node_loc, \n",
     "                                                                    grammar,\n",
     "                                                                    8, # max_depth = max depth of pipeline, depth of subprogram is bound by this\n",
-    "                                                                    dict)[0]\n",
+    "                                                                    dict)[1]\n",
     "    original_program = deepcopy(current_program)  \n",
     "    alternative_program = current_program                                                                                          \n",
     "    if neighbourhood_node_loc.i == 0\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -564,20 +564,41 @@
      ]
     },
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: Cannot `convert` an object of type Vector{Main.Herb.HerbGrammar.RuleNode} to an object of type Main.Herb.HerbGrammar.RuleNode\nClosest candidates are:\n  convert(::Type{T}, !Matched::T) where T at Base.jl:61\n  Main.Herb.HerbGrammar.RuleNode(::Any, !Matched::Any, !Matched::Any) at c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\Herb.jl\\HerbGrammar.jl\\src\\rulenode.jl:7",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration: 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration: 2\n",
+      "iteration: 3\n",
+      "iteration: 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration: 5\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "AssertionError: The depth of new random = 45 but remaning depth =  6. \n            Expreesion was Pipeline([(\"seq\", Pipeline([(\"PolynomialFeatures\", PolynomialFeatures()), (\"MaxAbsScaler\", MaxAbsScaler())])), (\"DecisionTree\", DecisionTreeClassifier())])",
      "output_type": "error",
      "traceback": [
-      "MethodError: Cannot `convert` an object of type Vector{Main.Herb.HerbGrammar.RuleNode} to an object of type Main.Herb.HerbGrammar.RuleNode\n",
-      "Closest candidates are:\n",
-      "  convert(::Type{T}, !Matched::T) where T at Base.jl:61\n",
-      "  Main.Herb.HerbGrammar.RuleNode(::Any, !Matched::Any, !Matched::Any) at c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\Herb.jl\\HerbGrammar.jl\\src\\rulenode.jl:7\n",
+      "AssertionError: The depth of new random = 45 but remaning depth =  6. \n",
+      "            Expreesion was Pipeline([(\"seq\", Pipeline([(\"PolynomialFeatures\", PolynomialFeatures()), (\"MaxAbsScaler\", MaxAbsScaler())])), (\"DecisionTree\", DecisionTreeClassifier())])\n",
       "\n",
       "Stacktrace:\n",
-      " [1] setindex!(A::Vector{Main.Herb.HerbGrammar.RuleNode}, x::Vector{Main.Herb.HerbGrammar.RuleNode}, i1::Int64)\n",
-      "   @ Base .\\array.jl:966\n",
+      " [1] random_fill_propose(current_program::Main.Herb.HerbGrammar.RuleNode, neighbourhood_node_loc::Main.Herb.HerbGrammar.NodeLoc, grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, max_depth::Int64, dict::Dict{String, Vector{Any}})\n",
+      "   @ Main.Herb.HerbSearch c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\Herb.jl\\HerbSearch.jl\\src\\stocastic_functions\\propose.jl:38\n",
       " [2] one_iter_mh(current_program::Main.Herb.HerbGrammar.RuleNode, grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, enumeration_depth::Int64, t_start::DateTime, max_time::Millisecond, current_program_accuracy::Float64)\n",
-      "   @ Main c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:17\n",
+      "   @ Main c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:7\n",
       " [3] mh(grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, enumeration_depth::Int64)\n",
       "   @ Main c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:16\n",
       " [4] top-level scope\n",
